--- a/wc-dev/css/main.scss
+++ b/wc-dev/css/main.scss
@@ -949,7 +949,7 @@ footer {
 		    width: 100%;
 		    position: relative;
 		    z-index: 2;
-		    margin-top: 20px;
+		    margin-top: 0;
 		}
 
 		.windmill-logo-container {
