--- a/wc-dev/css/main.scss
+++ b/wc-dev/css/main.scss
@@ -965,6 +965,7 @@ footer {
 		    height: auto;
 		    width: 78%;
 		    position: relative;
+		    margin-top: -40px;
 		}
 		
 		.windmill-sail {
