--- a/css/main.scss
+++ b/css/main.scss
@@ -103,7 +103,7 @@ textarea {
 		url('fonts/DPV3.ttf?crdhmn') format('truetype'),
 		url('fonts/DPV3.svg?crdhmn#DPV3') format('svg');
 	font-weight: normal;
-	font-style: normal;
+	font-style: bold;
 }
 
 [class^="icon-"], [class*=" icon-"] {
