--- a/tenants-toolkit/css/main.scss
+++ b/tenants-toolkit/css/main.scss
@@ -572,6 +572,13 @@ html.home {
 		}
 	}
 	
+	.search {
+		#main-content-wrapper {
+			padding: 0;
+		}	
+	}
+	
+	
 	#main.search-results {
 		display: block;
 		
