--- a/valley-chalets/stylesheets/site.css
+++ b/valley-chalets/stylesheets/site.css
@@ -78,9 +78,15 @@
 
 .nav .property-sublist li {
 	margin: 0;
-	font-size: 80%;
+	font-size: 90%;
 	line-height: 1.8em;
 }
+
+.nav .property-sublist li a {
+	color: #0f9bbc;
+}
+
+
 
 
 @media only screen and (max-width: 736px) {
