--- a/css/main.scss
+++ b/css/main.scss
@@ -898,11 +898,13 @@ nav {
 		}
 	   
 	   .light .large-logo {
-	   		font-size: 500%;	
+	   		width: auto;
+	   		height: 55px;	
 		}
 		
 		.dark .large-logo {
-	   		font-size: 500%;
+	   		width: auto;
+	   		height: 55px;
 	   		
 		}
 		
